# qmsr_demo

./: .gitignore  Makefile  README.md  config_flags.cfg  configure.sh  initdb.sql  pyproject.toml
experiments/: create_runner.py  vlasov.py  vlasov_analysis.py
qmsr/: data_io.py  driver.py  error_computation.py
qmsr/benchmark/: integration.py  vlasov.py
qmsr/reconstruction/: base.py  manifold_based.py  sampling.py
test/: qdeim_test.py
